tests/baselines/reference/systemModule12.errors.txt
systemModule12.ts(2,15): error TS2792: Cannot find module 'file1'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== systemModule12.ts (1 errors) ====
    ///<amd-module name='NamedModule'/>
    import n from 'file1'
                  ~~~~~~~
!!! error TS2792: Cannot find module 'file1'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    